# aimmd

./: .coveragerc  .drone.star  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATIONS.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: lint-with-pylint.yml  publish-to-pypi.yml  tests.yml
aimmd/: __about__.py  __init__.py  _version.py  tools.py
aimmd/analysis/: __init__.py  gradient_movie.py  hipr.py
aimmd/base/: __init__.py  density_collection.py  rcmodel.py  rcmodel_train_decision.py  storage.py  trainset.py  utils.py
aimmd/coords/: __init__.py  _symmetry.pyx  internal.py  symmetry.py  utils.py
aimmd/distributed/: __init__.py  _config.py  committors.py  config.py  dataclasses.py  dataclasses_internal.py  gmx_utils.py  logic.py  mdconfig.py  mdengine.py  pathmovers.py  pathsampling.py  slurm.py  spselectors.py  trajectory.py  utils.py
aimmd/keras/: __init__.py  layers.py  rcmodel.py  utils.py
aimmd/ops/: __init__.py  hooks.py  selector.py  traininghook.py  utils.py
aimmd/pytorch/: __init__.py  networks.py  optim.py  rcmodel.py  trainset_gpu.py  utils.py
aimmd/symreg/: __init__.py  losses.py  optimize.py  utils.py
arcd/: __about__.py  __init__.py
arcd/analysis/: __init__.py  gradient_movie.py  hipr.py
arcd/base/: __init__.py  rcmodel.py  rcmodel_train_decision.py  storage.py  trainset.py  utils.py
arcd/coords/: __init__.py  _symmetry.pyx  internal.py  symmetry.py  utils.py
arcd/data/: __init__.py  history.py  trainset.py  wrapmodel.py
arcd/keras/: __init__.py  layers.py  rcmodel.py  utils.py
arcd/nnetwork/: __init__.py  losses.py  utils.py
arcd/ops/: __init__.py  hooks.py  selector.py  trainer.py  traininghook.py  utils.py
arcd/pytorch/: __init__.py  networks.py  optim.py  rcmodel.py  trainset_gpu.py  utils.py
arcd/symreg/: __init__.py  losses.py  optimize.py  utils.py
docs/source/: conf.py  index.md  module_layout_autosummary.rst
docs/source/community/: contributing.md  support.md
docs/source/get_started/: installation.md
examples/: 1.5_Toy_pytorch_MultiDomainModel_setup.ipynb  1_Toy_pytorch.ipynb  1_Toy_pytorch_simple_setup.ipynb  1_Toy_tensorflow_simple_setup.ipynb  2_Toy_continuing_simulations.ipynb  3_Toy_SymbolicRegression.ipynb  3_Toy_loading_and_saving_rcmodels.ipynb  4_Toy_SymbolicRegression.ipynb  README.md
examples/LiCl_single_ion_dissociation/: 1.5_keras_ResNet_reduced_symmetry_functions.ipynb  1.5_keras_SNN_full_symmetry_functions.ipynb  1_keras_ResNet_reduced_symmetry_functions.ipynb  1_keras_SNN.ipynb  1_pytorch_ResNet_reduced_symmetry_functions.ipynb  2_committor_cross_validation.ipynb  2_emulate_production_and_postprocessing_training_keras.ipynb  2_emulate_production_and_postprocessing_training_pytorch_pyramidSNN_ResNet_top.ipynb  2_emulate_production_and_postprocessing_training_pytorch_pyramidal_ResNet.ipynb  initial_TP_400K.h5  initial_TP_430K.h5
examples/LiCl_single_ion_dissociation/training_and_validation_data/: LiCl_1M_validation_configurations.h5  LiCl_1M_validation_data.npz  LiCl_training_configurations.h5  LiCl_training_data.npz  LiCl_validation_configurations.h5  LiCl_validation_data.npz
examples/apply_on_existing_data/: README.md
examples/apply_on_existing_data/methane_clathrate/: methane_clathrate_TPS_training_data.npz  methane_clathrate_committors_validation_data.npz
examples/capped_alanine_dipeptide/: 1.5_keras_continue_TPS_with_new_storage.ipynb  1.5_keras_setup_and_TPS.ipynb  1.6_keras_continue_TPS_with_new_storage.ipynb  1_keras_setup_and_TPS.ipynb  1_pytorch_setup_and_TPS.ipynb  1_setup_and_TPS.ipynb  2_analysis.ipynb  ala_400K_TP_high_barrier.h5  ala_400K_TP_low_barrier.h5
examples/classic/: README.md
examples/classic/LiCl_single_ion_dissociation/: 1_pytorch_ResNet_reduced_symmetry_functions.ipynb  2_emulate_production_and_postprocessing_training_pytorch_pyramidSNN_ResNet_top.ipynb  README.md  dataloader.py
examples/classic/capped_alanine_dipeptide/: 1.5_keras_continue_TPS_with_new_storage.ipynb  1_pytorch_setup_and_TPS.ipynb  README.md
examples/classic/toy_systems/: 1.5_Toy_pytorch_MultiDomainModel_setup.ipynb  1_Toy_pytorch_simple_setup.ipynb  1_Toy_pytorch_simple_setup_XYDiagpot.ipynb  2_Toy_pytorch_continuing_simulations.ipynb  3_Toy_SymbolicRegression.ipynb  4_Toy_loading_and_saving_rcmodels.ipynb  README.md  toy_exact_committor.npy  toy_potentials.py
examples/distributed/: 1_GmxEngine.ipynb  2_Conditional_trajectory_propagation_and_TrajectoryFunctionWrappers.ipynb  3_CommittorSimulation.ipynb  Analyze_PathSampling.ipynb  Analyze_PathSampling_from_EQ_points.ipynb  CommittorSimulation.ipynb  Conditional_trajectory_propagation_and_TrajectoryFunctionWrappers.ipynb  Continue_PathSampling.ipynb  Generate_SPs_from_UmbrellaSampling.ipynb  GmxEngine.ipynb  PathSampling.ipynb  PathSampling_MDTraj.ipynb  PathSampling_from_EQ_points.ipynb  README.md  TPS_1_setup_and_run_simulation.ipynb  TPS_2_continue_simulation.ipynb  TPS_3_analyze_simulation.ipynb  TPS_4_rerun_with_changed_parameters_or_recover_crashed_simulations.ipynb  TPS_4_restart_incomplete_simulations.ipynb  TPS_with_EQ_SPs_1_generate_SPs_from_UmbrellaSampling.ipynb  TPS_with_EQ_SPs_2_setup_and_run_simulation.ipynb  TPS_with_EQ_SPs_3_continue_and_analyze_simulation.ipynb  TPS_with_EQ_SPs_4_rerun_with_changed_parameters_or_recover_crashed_simulations.ipynb  state_funcs.py  state_funcs_mda.py
examples/distributed/Advanced_topics/: Customizing_your_TPS_simulations_using_BrainTasks.ipynb
examples/distributed/gmx_infiles/: TP_low_barrier_300K_amber99sbildn.trr  TP_short2_low_barrier_300K_amber99sbildn.trr  TP_short_low_barrier_300K_amber99sbildn.trr  ala_300K.tpr  ala_300K_TP.trr  ala_300K_TP2.trr  ala_300K_TP_long.trr  ala_300K_amber99sb-ildn.tpr  conf.gro  md.mdp  (+12 more)
examples/methane_clathrate/: postprocessing_training_and_SymbolicRegression.ipynb
examples/resources/: logconf.py  pdbbfactor.tcl  toy_plot_helpers.py
tests/: conftest.py  helpers.py  test_base.py  test_coords.py  test_keras.py  test_ops.py  test_pytorch.py  test_storage.py
tests/distributed/: conftest.py  test_dataclasses.py
(+11 files in other folders)
